--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,13 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+.footer {
+  color: black;
+  text-align: left;
+}
+
+.rg-logo {
+  height: 10rem;
+  width: 10rem;
+}
