Update sidebar bg color

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -108,7 +108,7 @@ a[tabindex]:focus {
 
 .menu,
 .menu--responsive {
-  background-color: #0a011c;
+  background-color: #0e0028;
   color: #9812ff;
 }
 
