--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -10,7 +10,8 @@
 body {
   margin: 0;
   font-family: "Courier Prime", sans-serif;
-  background-color: #0a011c;
+  background-image: url(/static/img/loose_leaf_paper.svg);
+  background-size: 5%;
   font-size: 18px;
   line-height: 1.6;
   color: #ffffff;
