Clear homepage components

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -10,7 +10,7 @@
 body {
   margin: 0;
   font-family: "Courier Prime", sans-serif;
-  background-color: gray;
+  background-color: #EEEEEE;
   font-size: 18px;
   line-height: 1.6;
   color: #ffffff;
