--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -16,6 +16,10 @@ body {
   margin-bottom:50px;
 }
 
+a {
+  cursor: pointer;
+}
+
 .homepage {
   border-top: 5px solid #F9006C;
   /* border-bottom: 5px solid #8E2ABE; */
@@ -33,16 +37,13 @@ body {
 }
 
 .footer {
+  background-color: white;
   position: fixed;
   bottom: 0px;
   left: 0px;
   right: 0px;
   margin-bottom: 0px;
   border-top: 5px solid #8E2ABE;
-}
-
-.footer-wrapper {
-  height: auto;
 }
 
 .docs-link {
