--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -18,18 +18,30 @@
 } */
 
 .docusaurus-highlight-code-line {
-  background-color: rgb(72, 77, 91);
-  display: block;
-  margin: 0 calc(-1 * var(--ifm-pre-padding));
-  padding: 0 var(--ifm-pre-padding);
+	background-color: rgb(72, 77, 91);
+	display: block;
+	margin: 0 calc(-1 * var(--ifm-pre-padding));
+	padding: 0 var(--ifm-pre-padding);
 }
 
 .footer {
-  color: black;
-  text-align: left;
+	color: black;
+	text-align: left;
 }
 
 .rg-logo {
-  height: 10rem;
-  width: 10rem;
+	height: 10rem;
+	width: 10rem;
+}
+
+html[data-theme='dark'] .navbar__link,
+html[data-theme='dark'] .navbar__title,
+html[data-theme='dark'] .navbar__toggle,
+html[data-theme='dark'] .footer {
+	color: white;
+}
+
+html[data-theme='dark'] .navbar,
+html[data-theme='dark'] .footer {
+	background-color: #15003e;
 }
